<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:scrollbars="none"
    android:orientation="vertical"
    tools:context=".SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/app_name"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/purple_700"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <EditText

            android:background="@drawable/back_input"
            android:imeOptions="actionNext"
            android:id="@+id/name"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="180dp"
            android:hint="@string/name"
            android:textSize="20sp"
            android:inputType="text"
            android:maxLines="1"
            android:importantForAutofill="no" />

        <EditText

            android:background="@drawable/back_input"
            android:imeOptions="actionNext"
            android:id="@+id/email"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/password"
            android:padding="12dp"
            android:imeOptions="actionDone"
            android:background="@drawable/back_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:importantForAutofill="no" />

        <Button
            android:background="@drawable/back_btn"
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/have_acc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/already_have_account"
            android:textSize="17sp"
            android:textStyle="normal"
            android:textColor="@color/purple_500"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</ScrollView>